# tantrumpy

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: PRD.md  settings.json
.claude/reference/: development-best-practices.md  testing-guide.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml  quality.yml  release.yml
examples/: demo.py
src/tantrumpy/: __init__.py  colors.py  handler.py  messages.py  picker.py
tests/: conftest.py  test_colors.py  test_handler.py  test_messages.py  test_picker.py  test_public_api.py
