[project]
name = "tantrumpy"
version = "1.0.0"
description = "Your Python app's last words — dramatic, rude, comic, or philosophical exit messages."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "hemupadhyay26", email = "hemupadhyay26@users.noreply.github.com" }
]
keywords = ["cli", "humor", "exit", "signals", "terminal", "funny", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/hemupadhyay26/tantrumpy"
Repository = "https://github.com/hemupadhyay26/tantrumpy"
Issues = "https://github.com/hemupadhyay26/tantrumpy/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.2",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/tantrumpy --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/tantrumpy"]
omit = ["examples/*", "tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (modern Python syntax)
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]  # allow unused imports in test files

[tool.pyright]
pythonVersion = "3.8"
include = ["src/tantrumpy"]
strict = false
